test/spec_vectors/memory_copy/ok/module_94.wat
(module (memory 1 1) (func (export "test") (memory.copy (i32.const 65536) (i32.const 65536) (i32.const 0))))