test/spec_vectors/memory_copy/fail/module_57.wat
(module (memory 1 1) (func (export "testfn") (memory.copy (i64.const 10) (f32.const 20) (i64.const 30))))